--- a/layouts/contactus/list.html
+++ b/layouts/contactus/list.html
@@ -108,21 +108,18 @@
     </div>
 
     <!-- Info Grid -->
-    <div class="mt-16 grid md:grid-cols-2 gap-8 text-center">
+    <div class="mt-16 grid gap-8 text-center">
       <!-- Email Card -->
-      <div
-        class="bg-white/5 border border-white/10 p-6 rounded-2xl backdrop-blur-md shadow-lg hover:shadow-white/10 transition"
-      >
-        <h3 class="font-semibold text-lg mb-2">Email Us</h3>
-        <p class="text-gray-300">hello@algoteq.io</p>
-      </div>
 
       <!-- Address Card -->
       <div
         class="bg-white/5 border border-white/10 p-6 rounded-2xl backdrop-blur-md shadow-lg hover:shadow-white/10 transition"
       >
         <h3 class="font-semibold text-lg mb-2">Our Office</h3>
-        <p class="text-gray-300">Level 5, 123 Tech Street, Sydney</p>
+        <p class="text-gray-300">
+          Algoteq Pty Ltd Level 3, 55 Clarence Street <br />Sydney NSW 2000
+          Australia
+        </p>
       </div>
     </div>
   </div>
