--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -95,7 +95,8 @@
       </div>
     </div>
   </div>
-  <p class="text-sm text-gray-500 text-center mt-8">
+
+  <p class="text-sm text-gray-500 text-center my-8">
     &copy; 2025 <span class="font-semibold">Algoteq</span>. All rights reserved.
   </p>
 </footer>
