--- a/layouts/partials/services.html
+++ b/layouts/partials/services.html
@@ -386,7 +386,7 @@
              Item Text -->
             <span
               x-text="item"
-              class="ml-4 group-hover:text-gray-400 transition duration-300 pb-5 max-sm:pb-2"
+              class="ml-4 transition duration-300 pb-5 max-sm:pb-2"
             ></span>
           </div>
         </template>
