--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -198,3 +198,23 @@ body {
   position: relative;
   overflow: hidden;
 }
+
+/* Announcement */
+
+.animated-gradient {
+  background: linear-gradient(90deg, rgba(0, 170, 0, 1), rgba(83, 154, 253, 1));
+  background-size: 200% 200%;
+  animation: swapGradient 10s ease infinite;
+}
+
+@keyframes swapGradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 80% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
