--- a/layouts/partials/announcement.html
+++ b/layouts/partials/announcement.html
@@ -1,4 +1,4 @@
-<div class="announcement">
+<div class="announcement animated-gradient">
   <div
     class="text-white flex max-sm:text-center items-center justify-center h-[50px] lg:text-[14px] sm:text-[10px] gap-3"
   >
