--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -315,7 +315,9 @@
               >
             </div>
             <a href="/analytics" class="hover:text-gray-700">Analytics</a>
-            <a href="/ai_page" class="hover:text-gray-700">AI</a>
+            <a href="/artificial-intelligence" class="hover:text-gray-700"
+              >AI</a
+            >
             <a href="/careers" class="hover:text-gray-700">Career</a>
           </div>
         </div>
