--- a/layouts/algorithmic-platform/list.html
+++ b/layouts/algorithmic-platform/list.html
@@ -8,7 +8,7 @@
   <!-- Hero Section -->
   <div
     class="w-full h-[700px] max-sm:h-[350px] flex flex-col justify-around relative bg-cover bg-center"
-    style="background-image: url('/images/algo-platform.png');"
+    style="background-image: url('/images/algo-platform-2.png');"
   >
     <div
       class="ml-20 max-sm:ml-5"
