mobile version fixes

--- a/layouts/algorithmic-platform/list.html
+++ b/layouts/algorithmic-platform/list.html
@@ -71,7 +71,7 @@
       class="w-auto md:w-3/4 max-sm:w-11/12 mx-auto"
       x-data="{
       shown: true,
-      open: null,
+      open: 0,
       items: [
         {
           title: 'Separation of Concerns',
@@ -349,7 +349,7 @@
       class="w-full md:w-11/12 max-sm:w-11/12 mx-auto order-2 max-sm:order-1"
       x-data="{
       shown: true,
-      open: null,
+      open: 0,
       items: [
         { title: 'Functional Layers', content: 'The Functional Layers are the specialised processing layers that constitute the Assembly Line, a complex event processing (CEP) pipeline structured as a chain of responsibility...' },
         { title: 'Services', content: 'The Services are required by a Strategy to carry out its essential functions, be it trading, surveillance and monitoring, or management of other strategies...' },
