--- a/layouts/partials/services.html
+++ b/layouts/partials/services.html
@@ -46,7 +46,7 @@
       </div>
     </div>
     <div
-      class="pt-28 max-sm:pt-10 max-sm:mt-0 max-sm:mb-10 col-span-1"
+      class="pt-28 max-sm:pt-10 max-sm:mt-0 max-sm:mb-10 col-span-1 z-10"
       x-show="visible"
       x-transition:enter="transition ease-out duration-1000"
       x-transition:enter-start="opacity-0 translate-x-12"
