--- a/layouts/analytics/list.html
+++ b/layouts/analytics/list.html
@@ -25,7 +25,7 @@
       class="flex justify-center items-center max-sm:items-start max-sm:justify-center"
     >
       <div class="flex flex-col text-right max-sm:text-left">
-        <span class="text-lg text-white"
+        <span class="text-lg max-sm:text-base text-white"
           >Data-driven Innovation in Financial Markets</span
         >
       </div>
@@ -49,7 +49,9 @@
         Data-driven Innovation in Financial Markets
       </h2>
 
-      <p class="text-xl font-light leading-relaxed mb-12">
+      <p
+        class="text-xl max-sm:text-base font-light leading-relaxed mb-12 max-sm:mb-8"
+      >
         Successful electronic engagement with Financial Markets requires a
         foundation of meaningful and productive handling of noisy and high
         dimensional real-time and historical data. Techniques must be informed
