--- a/layouts/contactus/list.html
+++ b/layouts/contactus/list.html
@@ -100,7 +100,7 @@
             type="submit"
             class="px-8 py-3 bg-gradient-to-r from-blue-100 to-green-100 font-semibold hover:scale-105 hover:from-green-100 hover:to-blue-100 transition-all duration-300 shadow-white shadow-sm text-black"
           >
-            Learn More
+            Send Message
           </button>
           <p id="form-message" class="mt-4 text-sm"></p>
         </div>
