--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -8,7 +8,7 @@
         <h2 class="text-[4rem] max-sm:text-[2rem] font-bold leading-tight">
           Want to Start <br />a Project?
         </h2>
-        <a href="/contactus">
+        <a href="/contact-us">
           <button
             type="submit"
             class="px-8 py-3 bg-gradient-to-r from-blue-400 to-green-400 font-semibold hover:scale-105 hover:from-green-600 hover:to-blue-600 transition-all duration-300 shadow-white shadow-sm text-white"
