--- a/layouts/algorithmic-platform/list.html
+++ b/layouts/algorithmic-platform/list.html
@@ -307,7 +307,7 @@
       </div>
     </div>
 
-    <!-- Image container - no absolute positioning, scales responsively -->
+    <!-- Image container -->
     <div class="w-full flex justify-center items-center">
       <img
         src="/images/imac-screen.png"
