--- a/layouts/matching-engine/list.html
+++ b/layouts/matching-engine/list.html
@@ -93,7 +93,7 @@
     </div>
   </section>
 
-  <!-- Unique Features Section (Dynamic with Alpine.js) -->
+  <!--  Features Section-->
   <div
     class="w-full grid grid-cols-2 max-sm:flex bg-white text-black text-left py-20 max-sm:py-10"
     x-data="{
