--- a/layouts/order_management_system/list.html
+++ b/layouts/order_management_system/list.html
@@ -99,15 +99,10 @@
     <!-- Canvas background -->
     <canvas x-ref="canvas" class="absolute top-0 left-0 w-full h-full"></canvas>
 
-    <!-- Glassmor<section
-      class="relative h-screen w-full bg-black overflow-hidden"
-      x-data
-      x-init="initMatrixEffect($refs.canvas)"
-    >
-      <!-- Canvas for Matrix effect -->
+    <!-- Canvas for Matrix  -->
     <canvas x-ref="canvas" class="absolute top-0 left-0 w-full h-full"></canvas>
 
-    <!-- Glassmorphic Content -->
+    <!-- Glassmorphic -->
     <div
       class="relative z-10 flex h-full w-3/4 max-sm:w-11/12 justify-center px-4 max-sm:px-0"
     >
@@ -295,7 +290,7 @@
   </div>
 
   <!-- Introduction Section 2 -->
-  <!-- Functional Overview Section -->
+
   <div
     class="w-full max-h-max grid grid-cols-2 max-sm:grid-cols-1 bg-white text-black text-left py-20 max-sm:py-10"
     x-data="{ shown: false }"
