--- a/layouts/ai_page/list.html
+++ b/layouts/ai_page/list.html
@@ -72,7 +72,7 @@
         </button>
         <button
           @click="toggleGliders()"
-          class="px-3 py-1 bg-yellow-600 hover:bg-yellow-400 rounded"
+          class="px-3 py-1 bg-cyan-500 hover:bg-cyan-400 rounded"
         >
           <span x-text="glidersEnabled ? 'Gliders: On' : 'Gliders: Off'"></span>
         </button>
